--- a/Membus.Tests/Membus.Tests.csproj
+++ b/Membus.Tests/Membus.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3DBE4537-1813-4DF4-A4A2-2AD56838DD17}</ProjectGuid>
+    <ProjectGuid>{7022F4E3-C18B-43FF-A40E-14E008EF318F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Membus</RootNamespace>
-    <AssemblyName>Membus</AssemblyName>
+    <RootNamespace>Membus.Tests</RootNamespace>
+    <AssemblyName>Membus.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Should">
+      <HintPath>..\packages\Should.1.1.20\lib\Should.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -37,12 +40,26 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions.cs" />
-    <Compile Include="IBus.cs" />
-    <Compile Include="InMemoryBus.cs" />
+    <Compile Include="InMemoryBusTests\AutoWireTests.cs" />
+    <Compile Include="InMemoryBusTests\WiringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scratchpad.cs" />
+    <Compile Include="TestData\BlankMessage.cs" />
+    <Compile Include="TestData\OnePropertyMessage.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Membus\Membus.csproj">
+      <Project>{3DBE4537-1813-4DF4-A4A2-2AD56838DD17}</Project>
+      <Name>Membus</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
