constraints: added constraints

--- a/Membus.Tests/Membus.Tests.csproj
+++ b/Membus.Tests/Membus.Tests.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InMemoryBusTests\AutoWireTests.cs" />
+    <Compile Include="InMemoryBusTests\ConstraintTests.cs" />
     <Compile Include="InMemoryBusTests\WiringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scratchpad.cs" />
